--- a/style.css
+++ b/style.css
@@ -176,8 +176,12 @@ section {
 
 
 }
-
-@media screen and (max-width:600px) and (orientation:landscape){
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+@media only screen and (max-width:600px) and (orientation:landscape){
 
     .main {
         width: 100%;
@@ -187,8 +191,8 @@ section {
 
 
    }
-}
-@media  screen and (max-width: 992ppx) and (orientation:landscape) {
+} 
+@media only screen and (max-width: 992ppx) and (orientation:landscape) {
 
     .main {
         width: 100%;
@@ -202,7 +206,7 @@ section {
 }
 
 
-@media screen and (max-width:768px) and (orientation:landscape) {
+@media only screen and (max-width:768px) and (orientation:landscape) {
 
     .main {
         width: 100%;
@@ -214,7 +218,7 @@ section {
     }
 
 }
-@media screen and (max-width:320px) and (orientation:landscape){
+@media only screen and (max-width:320px) and (orientation:landscape){
 
     .main {
         width: 100%;
@@ -226,7 +230,7 @@ section {
    }
 }
 
-@media screen and (max-width:1024px) and (orientation:landscape){
+@media only screen and (max-width:1024px) and (orientation:landscape){
 
     .main {
         width: 100%;
@@ -237,5 +241,6 @@ section {
 
    }
 }
+
 
 
